--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <header>
       <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
+      <p class="lead">A simple calender app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
     <section class="text-center notification" id="notify">
